--- a/Hippo/InternalClasses/Views/InformationView/InformationView.xib
+++ b/Hippo/InternalClasses/Views/InformationView/InformationView.xib
@@ -1,33 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" restorationIdentifier="InformationView" id="iN0-l3-epB" customClass="InformationView" customModule="HippoChat" customModuleProvider="target">
+        <view contentMode="scaleToFill" restorationIdentifier="InformationView" id="iN0-l3-epB" customClass="InformationView" customModule="Hippo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ei8-Za-ACZ">
-                    <rect key="frame" x="98" y="371" width="218.5" height="164.5"/>
+                    <rect key="frame" x="10" y="335" width="394" height="136.5"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="KQU-Xa-g5i">
-                            <rect key="frame" x="0.0" y="0.0" width="218.5" height="164.5"/>
+                            <rect key="frame" x="0.0" y="0.0" width="394" height="136.5"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="noConversationImage" translatesAutoresizingMaskIntoConstraints="NO" id="gyI-5h-NaH">
-                                    <rect key="frame" x="0.0" y="0.0" width="218.5" height="128"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="394" height="100"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="128" id="hsz-rY-6jX"/>
+                                        <constraint firstAttribute="height" constant="100" id="hsz-rY-6jX"/>
                                     </constraints>
                                 </imageView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Conversation avaliable" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UcK-DZ-soC">
-                                    <rect key="frame" x="0.0" y="143" width="218.5" height="21.5"/>
+                                    <rect key="frame" x="0.0" y="115" width="394" height="21.5"/>
                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
@@ -46,7 +46,7 @@
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="Ei8-Za-ACZ" firstAttribute="centerY" secondItem="vUN-kp-3ea" secondAttribute="centerY" id="EAh-6T-ZgB"/>
+                <constraint firstItem="Ei8-Za-ACZ" firstAttribute="centerY" secondItem="vUN-kp-3ea" secondAttribute="centerY" constant="-50" id="EAh-6T-ZgB"/>
                 <constraint firstItem="Ei8-Za-ACZ" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="l5a-Te-Uq4"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
@@ -59,6 +59,6 @@
         </view>
     </objects>
     <resources>
-        <image name="noConversationImage" width="205" height="282"/>
+        <image name="noConversationImage" width="197" height="187"/>
     </resources>
 </document>
