--- a/Hippo/FuguUnique.storyboard
+++ b/Hippo/FuguUnique.storyboard
@@ -2591,8 +2591,36 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Oxj-by-MDK" userLabel="HeaderView" customClass="NavigationBar" customModule="Hippo" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="44" width="375" height="50"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sgz-wq-nfP">
+                                        <rect key="frame" x="46" y="4" width="283" height="46"/>
+                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
+                                        <color key="textColor" red="0.26274509800000001" green="0.35686274509999999" blue="0.50196078430000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="11F-Bw-Ae4">
+                                        <rect key="frame" x="0.0" y="4" width="46" height="46"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="46" id="1PY-Ym-pTT"/>
+                                            <constraint firstAttribute="width" constant="46" id="qju-vt-xkL"/>
+                                        </constraints>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="11F-Bw-Ae4" firstAttribute="leading" secondItem="Oxj-by-MDK" secondAttribute="leading" id="1qh-gV-OdT"/>
+                                    <constraint firstItem="Sgz-wq-nfP" firstAttribute="height" secondItem="11F-Bw-Ae4" secondAttribute="height" id="4aV-ia-cuV"/>
+                                    <constraint firstAttribute="bottom" secondItem="11F-Bw-Ae4" secondAttribute="bottom" id="Boc-sC-rkU"/>
+                                    <constraint firstItem="Sgz-wq-nfP" firstAttribute="leading" secondItem="11F-Bw-Ae4" secondAttribute="trailing" id="E2G-aM-jCR"/>
+                                    <constraint firstAttribute="height" constant="50" id="QYJ-oy-WVu"/>
+                                    <constraint firstAttribute="bottom" secondItem="Sgz-wq-nfP" secondAttribute="bottom" id="R4l-sQ-B3b"/>
+                                    <constraint firstAttribute="trailing" secondItem="Sgz-wq-nfP" secondAttribute="trailing" constant="46" id="oVA-Me-LKw"/>
+                                </constraints>
+                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Mb-TI-CqX" userLabel="errorContentView">
-                                <rect key="frame" x="0.0" y="65" width="375" height="0.0"/>
+                                <rect key="frame" x="0.0" y="94" width="375" height="0.0"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3zq-Y7-p6S">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="0.0"/>
@@ -2612,41 +2640,13 @@
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="01T-cv-WrQ">
-                                <rect key="frame" x="0.0" y="65" width="375" height="553"/>
+                                <rect key="frame" x="0.0" y="94" width="375" height="524"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <connections>
                                     <outlet property="dataSource" destination="EJI-9R-RFa" id="HEA-aI-rHH"/>
                                     <outlet property="delegate" destination="EJI-9R-RFa" id="IwE-sJ-WI1"/>
                                 </connections>
                             </tableView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Oxj-by-MDK" userLabel="HeaderView">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="0.0"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sgz-wq-nfP">
-                                        <rect key="frame" x="46" y="-46" width="283" height="46"/>
-                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
-                                        <color key="textColor" red="0.26274509800000001" green="0.35686274509999999" blue="0.50196078430000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="11F-Bw-Ae4">
-                                        <rect key="frame" x="0.0" y="-46" width="46" height="46"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="46" id="1PY-Ym-pTT"/>
-                                            <constraint firstAttribute="width" constant="46" id="qju-vt-xkL"/>
-                                        </constraints>
-                                    </button>
-                                </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstItem="11F-Bw-Ae4" firstAttribute="leading" secondItem="Oxj-by-MDK" secondAttribute="leading" id="1qh-gV-OdT"/>
-                                    <constraint firstItem="Sgz-wq-nfP" firstAttribute="height" secondItem="11F-Bw-Ae4" secondAttribute="height" id="4aV-ia-cuV"/>
-                                    <constraint firstAttribute="bottom" secondItem="11F-Bw-Ae4" secondAttribute="bottom" id="Boc-sC-rkU"/>
-                                    <constraint firstItem="Sgz-wq-nfP" firstAttribute="leading" secondItem="11F-Bw-Ae4" secondAttribute="trailing" id="E2G-aM-jCR"/>
-                                    <constraint firstAttribute="height" id="QYJ-oy-WVu"/>
-                                    <constraint firstAttribute="bottom" secondItem="Sgz-wq-nfP" secondAttribute="bottom" id="R4l-sQ-B3b"/>
-                                    <constraint firstAttribute="trailing" secondItem="Sgz-wq-nfP" secondAttribute="trailing" constant="46" id="oVA-Me-LKw"/>
-                                </constraints>
-                            </view>
                             <imageView hidden="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="app_loader_shape" translatesAutoresizingMaskIntoConstraints="NO" id="DhK-89-YLr" customClass="So_UIImageView" customModule="Hippo" customModuleProvider="target">
                                 <rect key="frame" x="167.5" y="313.5" width="40" height="40"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -2655,10 +2655,10 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="01T-cv-WrQ" firstAttribute="leading" secondItem="0pj-2f-m5u" secondAttribute="leading" id="KZe-Ez-HKB"/>
+                            <constraint firstItem="Oxj-by-MDK" firstAttribute="top" secondItem="Kgh-OH-wia" secondAttribute="bottom" id="Nsp-wT-G7O"/>
                             <constraint firstItem="ixV-F0-mX9" firstAttribute="top" secondItem="01T-cv-WrQ" secondAttribute="bottom" id="UlY-zl-SKu"/>
-                            <constraint firstItem="3Mb-TI-CqX" firstAttribute="top" secondItem="Oxj-by-MDK" secondAttribute="bottom" constant="65" id="VO6-Zz-cYB"/>
+                            <constraint firstItem="3Mb-TI-CqX" firstAttribute="top" secondItem="Oxj-by-MDK" secondAttribute="bottom" id="VO6-Zz-cYB"/>
                             <constraint firstItem="DhK-89-YLr" firstAttribute="centerX" secondItem="0pj-2f-m5u" secondAttribute="centerX" id="Wi7-4p-Xup"/>
-                            <constraint firstItem="Oxj-by-MDK" firstAttribute="top" secondItem="0pj-2f-m5u" secondAttribute="top" id="bfn-mT-bp7"/>
                             <constraint firstItem="Oxj-by-MDK" firstAttribute="leading" secondItem="0pj-2f-m5u" secondAttribute="leading" id="egm-jd-3gt"/>
                             <constraint firstAttribute="trailing" secondItem="Oxj-by-MDK" secondAttribute="trailing" id="emx-bg-bAd"/>
                             <constraint firstItem="3Mb-TI-CqX" firstAttribute="trailing" secondItem="01T-cv-WrQ" secondAttribute="trailing" id="fUv-EY-qrF"/>
@@ -2674,14 +2674,14 @@
                         <outlet property="errorContentView" destination="3Mb-TI-CqX" id="2dF-h3-Q5u"/>
                         <outlet property="errorLabel" destination="3zq-Y7-p6S" id="pc1-uV-PGd"/>
                         <outlet property="loaderView" destination="DhK-89-YLr" id="dTR-PE-ASr"/>
-                        <outlet property="navigationBackgroundView" destination="Oxj-by-MDK" id="ixx-Pj-reE"/>
+                        <outlet property="navigationBar" destination="Oxj-by-MDK" id="0KX-sr-CJJ"/>
                         <outlet property="promotionsTableView" destination="01T-cv-WrQ" id="Bp0-Iw-VYC"/>
                         <outlet property="viewError_Height" destination="1QM-CG-HCU" id="6Xh-F0-8zl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jG4-ar-HKK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1908" y="475"/>
+            <point key="canvasLocation" x="-1908" y="474.51274362818594"/>
         </scene>
         <!--Filter-->
         <scene sceneID="gYR-CB-FrT">
