--- a/Hippo/UIView/TableViewCell/PromotionTableViewCell/PromotionTableViewCell.xib
+++ b/Hippo/UIView/TableViewCell/PromotionTableViewCell/PromotionTableViewCell.xib
@@ -10,39 +10,39 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="PromotionTableViewCell" customModule="Hippo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="286"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="120" id="KGk-i7-Jjw" customClass="PromotionTableViewCell" customModule="Hippo" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="319" height="120"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="286"/>
+                <rect key="frame" x="0.0" y="0.0" width="319" height="120"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xud-Uu-5dH">
-                        <rect key="frame" x="5" y="5" width="310" height="276"/>
+                        <rect key="frame" x="8" y="2" width="303" height="110"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholderImg" translatesAutoresizingMaskIntoConstraints="NO" id="B24-ZH-lMi">
-                                <rect key="frame" x="10" y="271" width="290" height="0.0"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholderImg" translatesAutoresizingMaskIntoConstraints="NO" id="B24-ZH-lMi">
+                                <rect key="frame" x="10" y="95" width="283" height="0.0"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" id="9F7-sk-WQP"/>
+                                    <constraint firstAttribute="height" id="s8O-Ql-0u4"/>
                                 </constraints>
                             </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="WhG-y0-qES">
-                                <rect key="frame" x="10" y="5" width="290" height="43.5"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="WhG-y0-qES">
+                                <rect key="frame" x="15" y="15" width="273" height="43"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6S2-SK-Yv7">
-                                        <rect key="frame" x="0.0" y="0.0" width="290" height="18"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="273" height="16"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P9E-VN-wq9">
-                                        <rect key="frame" x="0.0" y="23" width="290" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="26" width="273" height="17"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jmI-G4-zxm">
-                                        <rect key="frame" x="0.0" y="43.5" width="290" height="0.0"/>
+                                        <rect key="frame" x="0.0" y="43" width="273" height="0.0"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -50,13 +50,16 @@
                                 </subviews>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fcn-By-Hj8">
-                                <rect key="frame" x="10" y="81.5" width="31" height="179.5"/>
+                                <rect key="frame" x="15" y="68" width="31" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="f8M-8z-ioF"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="whS-wa-wq1">
-                                <rect key="frame" x="221" y="48.5" width="79" height="30"/>
+                                <rect key="frame" x="214" y="63" width="79" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="4cP-y5-avz"/>
                                 </constraints>
@@ -73,41 +76,43 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="Fcn-By-Hj8" firstAttribute="centerY" secondItem="whS-wa-wq1" secondAttribute="centerY" id="0e4-U2-mJt"/>
                             <constraint firstItem="whS-wa-wq1" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Xud-Uu-5dH" secondAttribute="leading" constant="10" id="37B-9D-cYD"/>
-                            <constraint firstItem="WhG-y0-qES" firstAttribute="leading" secondItem="Xud-Uu-5dH" secondAttribute="leading" constant="10" id="4Fp-Qh-kG9"/>
-                            <constraint firstItem="WhG-y0-qES" firstAttribute="top" secondItem="Xud-Uu-5dH" secondAttribute="top" constant="5" id="77e-BE-OLr"/>
-                            <constraint firstItem="whS-wa-wq1" firstAttribute="top" secondItem="WhG-y0-qES" secondAttribute="bottom" id="7ga-gU-cfr"/>
-                            <constraint firstItem="Fcn-By-Hj8" firstAttribute="top" secondItem="whS-wa-wq1" secondAttribute="bottom" constant="3" id="BNT-J3-wRw"/>
+                            <constraint firstItem="WhG-y0-qES" firstAttribute="leading" secondItem="Xud-Uu-5dH" secondAttribute="leading" constant="15" id="4Fp-Qh-kG9"/>
+                            <constraint firstItem="WhG-y0-qES" firstAttribute="top" secondItem="Xud-Uu-5dH" secondAttribute="top" constant="15" id="77e-BE-OLr"/>
                             <constraint firstItem="B24-ZH-lMi" firstAttribute="leading" secondItem="Xud-Uu-5dH" secondAttribute="leading" constant="10" id="Gd7-eX-5J8"/>
-                            <constraint firstAttribute="trailing" secondItem="WhG-y0-qES" secondAttribute="trailing" constant="10" id="KPC-fg-yDN"/>
+                            <constraint firstAttribute="trailing" secondItem="WhG-y0-qES" secondAttribute="trailing" constant="15" id="KPC-fg-yDN"/>
                             <constraint firstItem="Fcn-By-Hj8" firstAttribute="leading" secondItem="P9E-VN-wq9" secondAttribute="leading" id="Ncb-wT-WQW"/>
-                            <constraint firstAttribute="bottom" secondItem="B24-ZH-lMi" secondAttribute="bottom" constant="5" id="Ort-tg-0bd"/>
-                            <constraint firstItem="B24-ZH-lMi" firstAttribute="top" secondItem="Fcn-By-Hj8" secondAttribute="bottom" constant="10" id="iSY-uc-gbl"/>
+                            <constraint firstAttribute="bottom" secondItem="B24-ZH-lMi" secondAttribute="bottom" constant="15" id="Ort-tg-0bd"/>
+                            <constraint firstItem="Fcn-By-Hj8" firstAttribute="top" secondItem="WhG-y0-qES" secondAttribute="bottom" constant="10" id="RZD-eq-Pqh"/>
+                            <constraint firstItem="B24-ZH-lMi" firstAttribute="top" secondItem="Fcn-By-Hj8" secondAttribute="bottom" constant="7" id="iSY-uc-gbl"/>
                             <constraint firstAttribute="trailing" secondItem="B24-ZH-lMi" secondAttribute="trailing" constant="10" id="lXU-Eb-wX2"/>
                             <constraint firstAttribute="trailing" secondItem="whS-wa-wq1" secondAttribute="trailing" constant="10" id="tEu-lw-dKX"/>
                         </constraints>
                     </view>
                 </subviews>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
-                    <constraint firstItem="Xud-Uu-5dH" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="4oz-jf-H1n"/>
-                    <constraint firstAttribute="trailing" secondItem="Xud-Uu-5dH" secondAttribute="trailing" constant="5" id="bjw-nx-Vap"/>
-                    <constraint firstAttribute="bottom" secondItem="Xud-Uu-5dH" secondAttribute="bottom" constant="5" id="fkN-Ct-mFU"/>
-                    <constraint firstItem="Xud-Uu-5dH" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="ixl-fv-dmp"/>
+                    <constraint firstItem="Xud-Uu-5dH" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="2" id="4oz-jf-H1n"/>
+                    <constraint firstAttribute="trailing" secondItem="Xud-Uu-5dH" secondAttribute="trailing" constant="8" id="bjw-nx-Vap"/>
+                    <constraint firstAttribute="bottom" secondItem="Xud-Uu-5dH" secondAttribute="bottom" constant="8" id="fkN-Ct-mFU"/>
+                    <constraint firstItem="Xud-Uu-5dH" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="ixl-fv-dmp"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="bgView" destination="Xud-Uu-5dH" id="cfS-wy-d66"/>
+                <outlet property="constraint_timeLabelBottom" destination="iSY-uc-gbl" id="DUM-U0-EO5"/>
                 <outlet property="dateTimeLabel" destination="Fcn-By-Hj8" id="vDI-3H-cRr"/>
                 <outlet property="descriptionLabel" destination="P9E-VN-wq9" id="z3T-Kb-4n8"/>
                 <outlet property="fullDescriptionLabel" destination="jmI-G4-zxm" id="yaD-GV-Z0J"/>
-                <outlet property="imageHeightConstraint" destination="9F7-sk-WQP" id="TMn-U0-VIZ"/>
+                <outlet property="imageHeightConstraint" destination="s8O-Ql-0u4" id="kW8-VY-nYn"/>
                 <outlet property="promotionImage" destination="B24-ZH-lMi" id="xUZ-Fm-Qa1"/>
                 <outlet property="promotionTitle" destination="6S2-SK-Yv7" id="m74-Kb-hQU"/>
                 <outlet property="showReadMoreLessButton" destination="whS-wa-wq1" id="1qR-qH-1UJ"/>
                 <outlet property="showReadMoreLessButtonHeightConstraint" destination="4cP-y5-avz" id="ady-Ub-xuc"/>
             </connections>
-            <point key="canvasLocation" x="137.68115942028987" y="187.5"/>
+            <point key="canvasLocation" x="132.60869565217394" y="131.91964285714286"/>
         </tableViewCell>
     </objects>
     <resources>
